# boincview

./: .gitignore  Cargo.toml  profile.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: boincview_benchmark.rs
src/: client.rs  config.rs  data_fetcher.rs  lib.rs  main.rs  tasks.rs  ui.rs
