[package]
name = "boincview"
version = "0.1.0"
authors = ["Glen Solsberry <glen@dp.cx>"]
edition = "2018"

[dependencies]
# boinc-rpc = { git = "https://github.com/vorot93/rust-boinc-rpc" }
boinc-rpc = { path = "../rust-boinc-rpc" }
tokio = { version = "0.2", features = ["dns", "sync", "tcp"] }
glib = "0.9"
chrono = "0.4.10"
gio = "0.15.12"
gtk = "0.15.5"

[profile.release]
debug = true
